# katacoda-conan

./: README.md  conan-pathway.json  profile-pathway.json
conan/: courseBase.sh  finish.md  index.json  intro.md  step1.1_whatsconan.md  step1.2_installConan.md  step1_helloWorld.md  step3_createlib.md
conan/assets/hellolib/: CMakeLists.txt  customlayout  hello.cpp  hello.h
conan/conan-creating-packages/: README.md  courseBase.sh  finish.md  index.json  intro.md  step1.0.md  step1.1.md  step1.2.md  step1.3.md  step2.0.md  step3.0.md  step3.1.md  step3.2.md  step4.0.md  step4.1.md  step5.0.md  step5.1.md  step6.0.md  step6.1.md  step6.2.md  step6.3.md  step6.4.md  step6.5.md  step6.6.md  step7.0.md  verify_imports.sh  verify_install_deps.sh  verify_step1.0.sh  verify_step1.2.sh  verify_step1.3.sh  verify_step2.0.sh  verify_step3.1.sh  verify_step3.2.sh  verify_step4.1.sh  verify_step5.0.sh  verify_step6.0.sh  verify_step6.1.sh  verify_step6.4.sh  verify_step6.5.sh  verify_step7.0.sh  (+1 more)
conan/conan-getting-started/: README.md  courseBase.sh  finish.md  foreground.sh  index.json  intro.md  step1.0_md5.md  step1.1_md5_search.md  step1.2_md5_inspect.md  step1.3_conanfile.md  step1.4_poco_install.md  step1.5_poco_build.md  step2.0_installation.md  step2_consumePackages.md  step3.0_inspecting_deps.md  step4.0_searching_packages.md  step4_uselib.md  step5.0_quiz.md  verify_inspecting_deps.sh  verify_installation.sh  verify_md5_inspect.sh  (+4 more)
conan/conan-introduction/assets/helloworld2/: CMakeLists.txt  hello2.cpp
conan/conan-introduction/assets/helloworld3/: CMakeLists.txt
(+40 files in other folders)
